# Charles_BUAA_CO_2022

./: README.md
homework/: homework2.circ  homework3.circ  homework4.circ
p0/: 2021_p0_1.circ  2021_p0_2.circ  2021_p0_3.circ  CRC.circ  GRF.circ  fsm.circ  ftoi.circ  navigation.circ
p1/ALU/: alu.v  alu.v.out
p1/BlockChecker/: BlockChecker.v  BlockChecker.v.out  tb.v
p1/EXT/: ext.v  ext.v.out
p1/Gray/: gray.v  gray.v.out  tb_gray.v  tb_gray.v.out
p1/String/: string.v  string.v.out
p1/String2/: string2.v  string2.v.out  tb.v
p1/splitter/: splitter.v  splitter.v.out
p2/Convolution_operation/: Convolution_operation.asm  Convolution_operation.cpp
p2/Matrix_mult/: Matrix_mult.asm  Matrix_mult.cpp
p2/dfs/: dfs.asm  dfs.cpp
p2/factorial/: factorial.asm  factorial.cpp
p2/match/: match.asm  match.cpp
p2/puzzle/: puzzle.asm  puzzle.cpp
p3/: Logisim单周期CPU设计文档.docx  Logisim单周期CPU设计文档.md  code.txt
p3/测试数据及反汇编程序/: cpu_test.py  in.txt
p4/Verilog单周期CPU设计文档/: Verilog单周期CPU设计文档.md
p4/cpu/: ALU.v  ALU.xst  ALU_change.v  ALU_stx_beh.prj  Controller.v  Controller_beh.prj  Controller_isim_beh1.wdb  DM.stx  DM.v  DM_change.v  DM_isim_beh2.wdb  DM_output.prj  DM_output.v  DM_output.xst  EXT.v  (+34 more)
p5/statistic/generator/COgenerator/: CMakeLists.txt  COgenerator.cpp  COgenerator.h  Environment.cpp  Environment.h  IM.cpp  IM.h  Instruction.cpp  Instruction.h  Random.cpp  Random.h  global.h  macro.h
p8/: p8.md
pre/: Binary conversion.circ  F.cpp  bus.circ  calc_mark.circ  f.asm  fibonacci.asm  fibonacci.cpp  tb_vote.v  tb_vote.v.out  vote.v  vote.v.out  vote.vcd
(+7611 files in other folders)
